[Qt] Box shadows on a transparency layer is very slow https://bugs.webkit.org/show_bug.cgi?id=107547

Reviewed by Noam Rosenthal.

Set an initial clip on the transparency layer, so that the clipping
bounds will never end up larger than the layer.

* platform/graphics/qt/TransparencyLayer.h:
(WebCore::TransparencyLayer::TransparencyLayer):

Canonical link: https://commits.webkit.org/125761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140412 268f45cc-cd09-0410-ab3c-d52691b4dbfc